[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scripts/ArmWrestle.gd" type="Script" id=1]
[ext_resource path="res://Art/hands.png" type="Texture" id=2]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 1, 0, 0, 1 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.262745, 0, 0, 1 )

[sub_resource type="Animation" id=3]
resource_name = "EnterScreen"
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect:rect_position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4, 0.7 ),
"transitions": PoolRealArray( 1, 1.23114, 3.605 ),
"update": 0,
"values": [ Vector2( 0, -633.929 ), Vector2( 6.10352e-05, 50.0622 ), Vector2( 0, 0 ) ]
}

[node name="Node2D" type="Node2D"]
scale = Vector2( 1.88521, 1.88521 )
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 1041.0
margin_bottom = 597.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FightProgressBar" type="ProgressBar" parent="ColorRect"]
visible = false
margin_left = 292.0
margin_top = 177.0
margin_right = 794.0
margin_bottom = 191.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StaminaProgressBar" type="ProgressBar" parent="ColorRect"]
margin_left = 294.39
margin_top = 194.711
margin_right = 796.39
margin_bottom = 208.711
custom_styles/fg = SubResource( 1 )
custom_styles/bg = SubResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/EnterScreen = SubResource( 3 )

[node name="ExposeDelayTimer" type="Timer" parent="."]

[node name="ExposeTimer" type="Timer" parent="."]
one_shot = true

[node name="StunTimer" type="Timer" parent="."]
one_shot = true

[node name="hands" type="Sprite" parent="."]
position = Vector2( 548.422, 373.266 )
scale = Vector2( 0.333019, 0.333019 )
texture = ExtResource( 2 )

[connection signal="timeout" from="ExposeDelayTimer" to="." method="_on_ExposeDelayTimer_timeout"]
[connection signal="timeout" from="ExposeTimer" to="." method="_on_ExposeTimer_timeout"]
[connection signal="timeout" from="StunTimer" to="." method="_on_StunTimer_timeout"]
